<resources>

    <!--Strings used for json request -->
    <string name="thumbnail">Movie Thumbnail</string>
    <string name="original_title">Original Title</string>
    <string name="synopsis">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="poster">Movie Poster</string>

    <!--Strings used for json request -->
    <string name="app_name">PopularMovies_Stage1_Retrofit</string>

    <!--Enter personal api key here-->
    <string name="api_key">123456</string>
    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="image_url">https://image.tmdb.org/t/p/w185//</string>

    <!--Strings used in Sorting order under settings -->
    <string name="action_settings">Settings</string>

    <string name="sort_key_option">sorting_option</string>

    <string name="sort_label_top">Top Rated</string>
    <string name="sort_key_top">top_rated</string>

    <string name="sort_label_popular">Popular</string>
    <string name="sort_key_popular">popular</string>


    <!-- Error messages-->
    <string name="detail_error_message">Movie data not available</string>



</resources>
